--- a/src/components/posts/Post.css
+++ b/src/components/posts/Post.css
@@ -4,3 +4,9 @@
     border-radius: 10px;
     margin: 10px;
 }
+
+.post-container{
+    border: 2px solid rebeccapurple;
+    padding: 10px;
+    
+}
